--- a/2019-09-20.md
+++ b/2019-09-20.md
@@ -12,7 +12,7 @@
 
 1. 在网页显示一个 Switch 开关给用户选择是否使用暗色主题（Ligth/Dark）
 2. 监听开关值的变化，然后在 `body` 上新增一个 class（.dark-mode），对应的 CSS 可以是
-
+      ```css
         body {
         	color: black;
         }
@@ -20,7 +20,7 @@
         .dark-mode body {
         	color: #FFF;
         }
-
+      ```
 3. 把用户选择记录到本地存储（cookie/localStorage）中
 4. 下次刷新页面，优先使用本地存储的配置
 
@@ -32,7 +32,7 @@
 ## New Way
 
 为了解决以上两个问题，浏览器提供了[新的媒体查询](https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-color-scheme)，以实现更优雅的适配方案
-
+  ```css
     body {
     	color: black;
     }
@@ -42,5 +42,5 @@
     		color: #FFF;
     	}
     }
-
-有了这个 feature，很多 WebApp 又可以继续装 Native 了
+  ```
+有了这个 feature，很多 WebAPP 又可以继续装 Native 了
